--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <link rel="preload" href="css/fonts.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="css/fonts.css"></noscript>
 
-    <link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/style.css"></noscript>
+
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="stylesheet" href="css/style.css" media="all">
+
 
     <link href="css/print.css" rel="stylesheet" media="print">
 
@@ -31,7 +33,7 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.avif"></a>
+      <a href="https://hard-cool.github.io/CSLevel2.github.io/"><img src="img/profilepic.avif"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
@@ -43,25 +45,25 @@
       <div class="content">
         <ul>
           <li>
-            <img style="height: 60px;" src="img/2048_60W.avif">
+            <img style="height: 350px;" src="img/2048_350H.avif" fetchpriority="high">
             <a href="project-2048.html">Build Your Own 2048!</a>
             <p>I made my own version of 2048. How cool is that!?</p>
           </li>
 
           <li>
-            <img style="height: 60px;" src="img/cam_be_like_60W.avif">
+            <img style="height: 230px;" src="img/cam_be_like_230H.avif">
             <a href="project-webperf.html">Website Performance Optimization</a>
             <p>Hey... this class looks familiar.</p>
           </li>
 
           <li>
-            <img style="width: 100px;" src="img/mobilewebdev_100.avif">
+            <img style="width: 225px;" src="img/mobilewebdev_225W.avif">
             <a href="project-mobile.html">Mobile Web Development</a>
             <p>Making mobile apps isn't so hard after all.</p>
           </li>
 
           <li>
-            <img style="width: 100px;" src="views/images/pizzeria-100.avif">
+            <img style="width: 225px;" src="views/images/pizzeria_225W.avif">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
