--- a/project-2048.html
+++ b/project-2048.html
@@ -13,8 +13,7 @@
 
     <link href="css/print.css" rel="stylesheet" media="print">
 
-    <link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/style.css"></noscript>
+    <link rel="stylesheet" href="css/style.css">
 
 
     <script>
@@ -31,7 +30,7 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.avif" style="height: 70px;"></a>
+      <a href="https://hard-cool.github.io/CSLevel2.github.io/"><img src="img/profilepic.avif" style="height: 70px;"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
