--- a/project-mobile.html
+++ b/project-mobile.html
@@ -12,8 +12,8 @@
 
     <link href="css/print.css" rel="stylesheet" media="print">
 
-    <link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/style.css"></noscript>
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="stylesheet" href="css/style.css" media="all">
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
@@ -29,7 +29,7 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.avif"></a>
+      <a href="https://hard-cool.github.io/CSLevel2.github.io/"><img src="img/profilepic.avif"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
