--- a/project-webperf.html
+++ b/project-webperf.html
@@ -12,8 +12,8 @@
 
     <link href="css/print.css" rel="stylesheet" media="print">
 
-    <link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/style.css"></noscript>
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="stylesheet" href="css/style.css" media="all">
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
@@ -29,7 +29,7 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.avif"></a>
+      <a href="https://hard-cool.github.io/CSLevel2.github.io/"><img src="img/profilepic.avif"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
@@ -42,7 +42,7 @@
 
         <p>Thanks to everyone at Udacity and Google who made this class happen! Now for a very true meme and some <strike>lorem</strike> bacon ipsum.</p>
 
-        <img src="img/cam_be_like.avif" fetchpriority="high">
+        <img src="img/cam_be_like.webp" fetchpriority="high" style="height: 492px;">
 
         <p>Bacon ipsum dolor sit amet et pork belly porchetta excepteur dolor, laborum laboris magna labore dolore in fugiat beef ribs. Fugiat leberkas nulla do kevin dolore. Flank hamburger dolor swine prosciutto sirloin pig jerky sunt consequat pariatur. Mollit meatloaf nostrud laboris shoulder excepteur velit officia meatball nisi turkey. Nulla jowl spare ribs, et drumstick magna frankfurter.</p>
 
