--- a/project-2048.html
+++ b/project-2048.html
@@ -30,7 +30,7 @@
 
   <body>
     <header>
-      <a href="https://hard-cool.github.io/CSLevel2.github.io/"><img src="img/profilepic.avif" style="height: 70px;"></a>
+      <a href="/"><img src="img/profilepic.avif" style="height: 70px;"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
@@ -41,7 +41,7 @@
 
       <div class="content">
 
-        <img class="img-responsive" src="img/2048.avif" fetchpriority="high">
+        <img class="img-responsive" src="img/2048.avif" fetchpriority="high" style="height: 822px;">
 
         <p>Bacon ipsum dolor sit amet et pork belly porchetta excepteur dolor, laborum laboris magna labore dolore in fugiat beef ribs. Fugiat leberkas nulla do kevin dolore. Flank hamburger dolor swine prosciutto sirloin pig jerky sunt consequat pariatur. Mollit meatloaf nostrud laboris shoulder excepteur velit officia meatball nisi turkey. Nulla jowl spare ribs, et drumstick magna frankfurter.</p>
 
