--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <body>
     <header>
-      <a href="https://hard-cool.github.io/CSLevel2.github.io/"><img src="img/profilepic.avif"></a>
+      <a href="/"><img src="img/profilepic.avif"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
